# indian-financial-news-aggregator

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  backfill_source_name.sql  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  pytest.ini  v1_3_2_feed_expansion.sql
backend/docs/: analytics_validation.md
backend/migrations/: env.py
backend/migrations/versions/: 0dc2dda4ca09_add_materialized_views_and_seeds.py  215548651d72_article_text_fields.py  21af7d79c2f7_initial_schema.py  38891208f85e_initial_migration.py  6a5dbf632264_add_raw_and_failed_article_pipeline.py  a3e4b8fd6fdd_search_vector_and_indexes.py  e3a2dac764bc_add_timezone_hint.py  e48e368856a2_add_pipeline_run_metrics_and_source_.py  f5e815fc5802_add_enrichment_models.py
backend/scripts/: manual_ingestion.py  seed_all_feeds.py  seed_feeds.py  seed_moneycontrol_feed.py  test_api_brutalization.py  test_db_validation.py  test_ingestion_chaos.py  validate_feeds.py
backend/src/app/: main.py
backend/src/app/collectors/: __init__.py  base.py
backend/src/app/core/: __init__.py  config.py  constants.py  env_loader.py  exceptions.py  logging.py  metrics.py  middleware.py  startup.py
backend/src/app/db/: __init__.py  analytics_repository.py  base.py  repository.py  session.py
backend/src/app/domain/: articles.py  collectors.py  (+2 more)
backend/tests/: test_admin_auth.py  test_deduplicator.py  test_exports_and_filters.py  test_metrics.py  test_normalizer.py
(+169 files in other folders)
