[project]
name = "financial-news-backend"
version = "0.1.0"
description = "Indian Financial News Aggregator Backend"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.2",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "pandas>=2.2.2",
    "openpyxl>=3.1.5",
    "rapidfuzz>=3.9.6",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.4",
    "mypy>=1.11.2",
]

[tool.ruff]
line-length = 100